--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,8 @@
   <!-- CSS will be injected by webpack here -->
   <!-- Preload link tags will be injected by webpack here -->
   <link rel="stylesheet" type="text/css" href="assets/css/horizon-swiper.min.css">
+  <link rel="stylesheet" type="text/css" href="styles/styles.css">
+
 </head>
 
 <body>
